fix message alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -384,6 +384,9 @@ main {
             display: flex;
             align-items: center;
             flex-direction: column;
+            p {
+              width: 100%;
+            }
             details {
               width: 100%;
               summary {
